Fix "selected" page and make it visible on mobile

--- a/styles.css
+++ b/styles.css
@@ -136,12 +136,17 @@ a:hover {
         transition: height 0.5s ease;
         height: 0;
         overflow: hidden;
+
+        border-left: 8px solid transparent;
     }
     nav a:hover {
         text-decoration: none; /* need this to override default 'a' behaviour */
     }
     .menu-checkbox:checked ~ nav a {
         height: 50px;
+    }
+    nav a.selected, nav a:hover {
+        border-left-color: #ffc100;
     }
 }
 
@@ -189,9 +194,6 @@ a:hover {
 
         text-decoration: none;
         color: #ffffff;
-        /* font-size: 1.1rem; */
-        /* font-weight: bold; */
-        /* font-family: "Open Sans", sans-serif; */
 
         border-top: 4px solid transparent;
         border-bottom: 4px solid transparent;
